--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "apility/laravel-fcm": "^1.4",
         "astrotomic/laravel-translatable": "^11.8",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
